# Rillio

./: .gitignore  CLAUDE.md  README.md  pnpm-lock.yaml
.claude/: launch.json
.github/workflows/: android-beta.yml  release.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/: README.md  components.json  manifest.json  package.json  webpack.config.js
apps/web/dev/: loading-animation-preview.html
apps/web/src/: index.html  index.js  modules.d.ts
apps/web/tests/: deepLinks.spec.js
checklists/: android-mpv.md  streaming-server-rust.md
crates/core/: .gitignore  Cargo.toml
crates/core-web/: README.md  package.json
crates/streaming-server/: Cargo.toml
crates/streaming-server/src/: cache_api.rs  config.rs  engine.rs  lib.rs  local_addon.rs  proxy.rs  routes.rs  stats.rs  storage.rs  stream.rs  support.rs  torrent.rs  types.rs
crates/streaming-server/tests/: cache_files_and_meta.rs  cache_playable_file.rs  confinement.rs  local_addon_e2e.rs  oracle_diff.rs  proxy_e2e.rs  stats_routes.rs  support_e2e.rs
docs/: cross-platform-refactor.md  desktop-shell.md
docs/streaming-server-rust/: README.md
docs/ui-rewrite/: decisions.md  overlay-exceptions-decision.md
docs/ui-rewrite/research/: form-primitives.json  media-cards.json  nav-shell.json  overlays.json  route-metadetails.json  route-player.json  routes-browse.json  routes-modal.json  (+2 more)
landing/: index.html  terms.html
scripts/: fetch-libmpv-android.ps1  fetch-libmpv-android.sh
spikes/dcomp-webview/: .gitignore  Cargo.toml  overlay.html
spikes/dcomp-webview/src/: lib.rs  main.rs
(+302 files in other folders)
